Fixed overlap of uber type and price estimates

--- a/app/assets/stylesheets/styles/home.scss
+++ b/app/assets/stylesheets/styles/home.scss
@@ -192,7 +192,7 @@ li.active {
 
 .uberPrice {
 	position: relative;
-	top: 0px;
+	left: 20px;
 	font-size: 16px;
 }
 
